<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:src="@drawable/ic_launcher_foreground"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:padding="8dp"
                android:id="@+id/price"
                android:text="@string/price_hp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="#4D00000"
                android:textColor="#000000"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:text="@string/judul_hp"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stock"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/maincontent"
            android:padding="16dp"
            android:textColor="#000000"
            android:text="@string/main_component_of_smartphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/spesification"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:text="@string/display"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/display_content"
                    android:text="@string/display_content"
                    android:textSize="14sp"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginRight="16dp"
                    android:text="@string/body"
                    android:layout_gravity="center_vertical"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/body_content"
                    android:text="@string/body_content"
                    android:textSize="14sp"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:text="@string/baterry"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/battery_content"
                    android:text="@string/battery_content"
                    android:textSize="14sp"
                    android:textColor="#000000" />
            </TableRow>

        </TableLayout>

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/sell_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sellerimage"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_centerVertical="true"
                android:layout_width="60dp"
                android:layout_height="60dp"/>

            <TextView
                android:id="@+id/sellername"
                android:layout_toRightOf="@id/sellerimage"
                android:textColor="#000000"
                android:paddingLeft="16dp"
                android:layout_centerVertical="true"
                android:text="@string/nama_penjual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </RelativeLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/chat"
                android:text="@string/chat"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cart"
                android:text="@string/chart"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buy"
                android:text="@string/buy"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>