<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    app:cardUseCompatPadding="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productimage"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_marginLeft="8dp"
            android:layout_marginTop="-16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sellerimage"
                android:src="@mipmap/ic_launcher"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/price"
                android:layout_alignParentRight="true"
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:text="@string/price_hp"
                android:background="@drawable/shape_background"
                android:gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                tools:ignore="RelativeOverlap,RtlHardcoded" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:id="@+id/productname"
                android:text="@string/product_name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productdetail"
                android:text="@string/product_detail"
                android:textColor="#a4a7b5"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>